--- a/security.html
+++ b/security.html
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543317-etas-internship-embedded-security-analyst-at-the-embedded-security-escrypt-dept-'>Bosch Group ETAS_(Internship)_Embedded Security Analyst at the Embedded Security,Escrypt Dept. | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543317-etas-internship-embedded-security-analyst-at-the-embedded-security-escrypt-dept-'>Bosch Group ETAS_(Internship)_Embedded Security Analyst at the Embedded Security,Escrypt Dept. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -247,7 +247,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oYBLafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nwK8nMw2'>Imperva Careers - Network Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oYBLafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nwK8nMw2'>Imperva Careers - Network Security Engineer</a></h5> 
 <p><span class="badge badge-light">Plano, TX Arlington, VA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -299,11 +299,11 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Anitian/743999698408740-security-operations-soc-analyst-1'>Anitian  Security Operations (SOC) Analyst 1 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999698408740-security-operations-soc-analyst-1'>Anitian  Security Operations (SOC) Analyst 1 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzF9Vfw2&k=Job&j=oZCrbfwX&__jvst=Employee&__jvsd=saIdRfwG&__jvsc=Twitter&bid=n7PrnMw1'>K2 Group, Inc. Careers - Information Assurance (IA) System Security Engineer I</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzF9Vfw2&k=Job&j=oZCrbfwX&__jvst=Employee&__jvsd=saIdRfwG&__jvsc=Twitter&bid=n7PrnMw1'>K2 Group, Inc. Careers - Information Assurance (IA) System Security Engineer I</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -333,7 +333,7 @@ months contract Bloomington, IL. Requirements. Primary responsibilities will?...
 <p>16 Out 2019 ... Quem somos?A Zup desenvolve produtos digitais disruptivos que impactam a 
 vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oT5L9fwC&__jvst=Employee+Referral&__jvsd=suNSMgwG&__jvsc=Twitter&bid=nENhnMwm'>WP Engine Careers - Senior Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oT5L9fwC&__jvst=Employee+Referral&__jvsd=suNSMgwG&__jvsc=Twitter&bid=nENhnMwm'>WP Engine Careers - Senior Security Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -369,7 +369,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Omaha, NE</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SkynetSecureSolutions/743999679505619-it-security-analyst'>Skynet Secure Solutions IT Security Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SkynetSecureSolutions/743999679505619-it-security-analyst'>Skynet Secure Solutions IT Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Mumbai Mumbai</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -433,7 +433,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.icf.com:443/careers/jobs/R1904170?utm_medium=emp-social&utm_source=Twitter&utm_campaign=thehub'>Cyber Security Engineer (HBSS/ACAS) | ICF</a></h5> 
+<h5><a href='https://www.icf.com:443/careers/jobs/R1904170?utm_medium=emp-social&utm_source=Twitter&utm_campaign=thehub'>Cyber Security Engineer (HBSS/ACAS) | ICF</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
