--- a/deep-learning.html
+++ b/deep-learning.html
@@ -108,7 +108,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://martinsenmayer.recruitee.com/l/de/o/deep-learning-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://martinsenmayer.recruitee.com/l/de/o/deep-learning-engineer'>
       Deep Learning Engineer - Martinsen Mayer
     </a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
@@ -130,7 +130,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tencent/jobs/4473307002'>Job Application for Deep Learning Researcher at Tencent</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tencent/jobs/4473307002'>Job Application for Deep Learning Researcher at Tencent</a></h5> 
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -166,7 +166,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/jobs/1146540'>Deep Learning Engineer with Strong iOS ... - Crisalix - Jobs</a></h5> 
+<h5><a href='https://crisalix.workable.com/jobs/1146540'>Deep Learning Engineer with Strong iOS ... - Crisalix - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 7, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills at Crisalix.</p>
@@ -187,7 +187,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/haydenai/13012c8f-dc71-479b-bd0c-9a0b3db2553d'>Hayden AI Technologies - Senior Research Scientist - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/haydenai/13012c8f-dc71-479b-bd0c-9a0b3db2553d'>Hayden AI Technologies - Senior Research Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco, California</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -236,7 +236,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://controlexpert.softgarden.io/job/5034347/Student-gn-f%C3%BCr-Masterarbeit-im-Bereich-Deep-Learning?jobDbPVId=13773137&amp;l=de'>Student (gn) f?r Masterarbeit im Bereich Deep Learning</a></h5> 
+<h5><a href='https://controlexpert.softgarden.io/job/5034347/Student-gn-f%C3%BCr-Masterarbeit-im-Bereich-Deep-Learning?jobDbPVId=13773137&amp;l=de'>Student (gn) f?r Masterarbeit im Bereich Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-01</p>
 <hr/>
@@ -346,7 +346,7 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://combateafraude.recruitee.com/o/engenheiro-de-computacao-visualdeep-learning'>
+<h5><a href='https://combateafraude.recruitee.com/o/engenheiro-de-computacao-visualdeep-learning'>
       Engenheiro de Computa??o Visual/Deep Learning - combateafraude.com
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -454,7 +454,7 @@ learning to join the team at Thomson Reuters Labs in Zug. What do we do?</p>
 computer vision to enable a seamless grab-and-go retail experience. We differ 
 from?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/jobs/1109157'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
+<h5><a href='https://crisalix.workable.com/jobs/1109157'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 18, 2019 ... Experienced in Machine learning algorithms and implementations. Computer 
 Vision / Computational geometry. GIT version control (good knowledge). English
@@ -490,7 +490,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Deep-Learning-Intern---Content---Technology--Winter-Spring-2020-_JR1923762-2'>Deep Learning Intern - Content & Technology (Winter/Spring 2020)</a></h5> 
+<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Deep-Learning-Intern---Content---Technology--Winter-Spring-2020-_JR1923762-2'>Deep Learning Intern - Content & Technology (Winter/Spring 2020)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 7, 2019 ... Developer Technology Intern - AI | Canada, Toronto ? Deep Learning Intern ... 
 Compute Performance Developer Technology Intern - CUDA | Canada, Toronto.</p>
