--- a/project-manager.html
+++ b/project-manager.html
@@ -45,11 +45,11 @@
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qCA9Vfw0&k=Job&j=oFTmbfwP&__jvst=Employee&__jvsd=sBvgWhw4&__jvsc=Twitter&bid=ntzrpMw9'>Miniclip Careers - Go-To-Market Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/derivesystems/job/oswlafwd'>Derive Systems Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Broomfield, Colorado</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='http://potentialpark.applytojob.com/apply/aHRLgwVLu3/Project-Manager-For-A-German-Pilot-Study'>Project Manager for a German pilot study - Potentialpark - Career Page</a></h5> 
@@ -171,7 +171,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/oWlsbfwE'>umlaut North America Careers - Quality Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/umlaut/job/oWlsbfwE'>umlaut North America Careers - Quality Project Manager</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -235,7 +235,7 @@
 <p><span class="badge badge-light">Los Angeles, CA  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/83bf020f4561-project-manager-lead-detailer'>Project Manager - Lead Detailer</a></h5> 
+<h5><a href='https://kimmel-associates.breezy.hr/p/83bf020f4561-project-manager-lead-detailer'>Project Manager - Lead Detailer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -273,11 +273,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheCreativeSquareCompanyPteLtd/743999698538571-project-manager'>The Creative Square Company Pte. Ltd. Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TheCreativeSquareCompanyPteLtd/743999698538571-project-manager'>The Creative Square Company Pte. Ltd. Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://hitchcock.referrals.selectminds.com/jobs/project-manager-ft-psychiatry-research-days-6862'>Project Manager (FT), Psychiatry Research - Days - Dartmouth-Hitchcock Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hitchcock.referrals.selectminds.com/jobs/project-manager-ft-psychiatry-research-days-6862'>Project Manager (FT), Psychiatry Research - Days - Dartmouth-Hitchcock Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -353,7 +353,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://centimark.applytojob.com/apply/RCHn3wfgTw/Commercial-Project-Manager-CentiMark-Roofing'>Commercial Project Manager (CentiMark Roofing) - CentiMark Corporation - Career Page</a></h5> 
+<h5><a href='http://centimark.applytojob.com/apply/RCHn3wfgTw/Commercial-Project-Manager-CentiMark-Roofing'>Commercial Project Manager (CentiMark Roofing) - CentiMark Corporation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -421,7 +421,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://tetratech.referrals.selectminds.com/jobs/audio-visual-senior-engineer-project-manager-new-york-ny-office-15784'>Audio Visual Senior Engineer/Project Manager - New York, NY office - Tetra Tech Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tetratech.referrals.selectminds.com/jobs/audio-visual-senior-engineer-project-manager-new-york-ny-office-15784'>Audio Visual Senior Engineer/Project Manager - New York, NY office - Tetra Tech Careers</a></h5> 
 <p><span class="badge badge-light">New York, NY New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
